--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Project Euler</title>
 </head>
-<body>
+<body style="background: rgb(21, 6, 49);">
     
     <script src="script.js"></script>
 </body>
